scss/legacy/stylesheet.scss
/* ... */
.vertical-input-group .input-group:first-child * {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.vertical-input-group .input-group:last-child {
    padding-top: 0;
}

.vertical-input-group .input-group:last-child * {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.vertical-input-group .input-group:not(:last-child):not(:first-child) {
    padding-top: 0;
    padding-bottom: 0;
}

.vertical-input-group .input-group:not(:last-child):not(:first-child) * {
    border-radius: 0;
}

.vertical-input-group .input-group:not(:first-child) * {
    border-top: 0;
}


/* =================================== */


/*  8. Blocks
/* =================================== */

code {
    padding: 0;
}

.block-children {
    margin-left: 16px;
}

ul>.block-children,
ol>.block-children {
    margin-left: 4px;
}

.heading {
    position: relative;
}

.heading a.copy-anchor {
    display: inline-flex;
    opacity: 0;
    transform: translateX(4px);
    position: absolute;
    left: -28px;
    top: -2px;
    transition: opacity 0.2s ease-in-out 0s, transform 0.2s ease-in-out 0s;
    width: 28px;
    text-align: center;
}

.heading a.copy-anchor svg {
    width: 20px;
    height: 20px;
    flex-shrink: 0;
}

.heading:hover a.copy-anchor,
.heading:focus-within a.copy-anchor {
    opacity: 1;
    transition-duration: 0.1s;
    transform: none;
}

.logo img {
    max-width: 120px;
    max-height: 30px;
}

.navbar-nav li {
    height: 44px;
}

#page-tab-content {
    padding-top: var(--contentBlockGap);
    max-width: var(--contentMaxWidth);

    &.centered {
        margin-left: auto;
        margin-right: auto;
    }
}


.container-title-overlay {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: var(--colorNeutral900);
    opacity: 0.4;
    z-index: 0;
}

.container-title {
    background-color: var(--pageHeaderBackground);
    margin: var(--pageHeaderMargin);
    margin-bottom: 0;
    border-radius: var(--pageHeaderRadius);
    border-bottom: 1px solid var(--pageHeaderBorderColor);
    color: var(--pageHeaderInk);
    position: relative;
    padding: 0px var(--contentContainerPadding);

    &.style-boxed {
        --pageHeaderMargin: 20px;
        --pageHeaderRadius: 12px;
        --pageHeaderBorderColor: transparent;
    }
}

.container-title > .slider {
    width: 100%;
    max-width: calc(var(--contentMaxWidth) + var(--tocContainerWidth));
    margin: 0px auto;
    padding: var(--pageHeaderPaddingTop) 0 var(--pageHeaderPaddingBottom);
    z-index: 1;
    gap: 12px;
    display: flex;
    flex-direction: column;
    min-height: var(--pageHeaderHeight);
    justify-content: center;

    h1.page-title {
        padding: 0px;
        font-family: var(--pageTitleFontFamily);
        color: var(--pageHeaderInk);
        font-size: var(--pageTitleFontSize);
        font-weight: var(--pageTitleFontWeight);
        line-height: 1.2;
        margin: 0;
    }
    
    .subtitle {
        margin: 0;
        color: var(--pageDescriptionInk, var(--pageHeaderInk));
        font-weight: var(--fontWeightRegular);
        font-size: var(--pageDescriptionFontSize);
        line-height: var(--pageDescriptionLineHeight, 1.4);
        max-width: var(--contentMaxWidth);
    }
}

.container-title.inverted > .slider {
    h1,
    .subtitle {
        color: var(--colorInkInverted);
    }
}


.container-tabs {
    width: 100%;
    padding: 0 var(--contentContainerPadding);
    margin-bottom: 0px;
    position: relative;
    position: sticky;
    top: var(--topNavHeight);
    background: var(--colorBackgroundPrimary);
    z-index: 20;

    > .tabbed-navigation {
        max-width: calc(var(--contentMaxWidth) + var(--tocContainerWidth));
        width: 100%;
        margin: 0px auto;
        z-index: 1;
        overflow-x: scroll;
        overflow-y: hidden;
        scrollbar-width: none;
        /* Firefox */
        -ms-overflow-style: none;
        /* Internet Explorer 10+ */
        box-shadow: inset 0px -1px 0 0px var(--colorBorderSubtle);
    }
    
}    

.container-tabs>.tabbed-navigation::-webkit-scrollbar {
    /* WebKit */
    width: 0;
    height: 0;
}

.container-title.centered {
    text-align: center;
}

.container-title.flexed,
.container-tabs {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.container-title.centered>.slider,
.container-tabs>.tabbed-navigation {
    left: initial;
    display: flex;
    flex-direction: column;
    /* align-content: center; */
    align-items: center;
    justify-content: center;
}

.container-tabs>.tabbed-navigation {
    min-height: 48px;
}

.container-tabs>.tabbed-navigation {
    align-items: start;
}

#section-content-page {
    max-width: var(--contentMaxWidth);
    width: calc(100% - 240px); /* removing the width of the table of contents */
    margin-bottom: 100px;

    a {
        text-decoration: underline;

        &:hover {
            text-decoration: none;
        }
    }
}

@media (max-width: 1169px) {
    :root {
        --tocContainerWidth: 0px;
    }

    #content-nav {
        display: none;
    }

    #section-content-page {
        width: 100%;
    }
}


/* Sidebar Navigation */
#content-nav-container {
    padding-bottom: 16px;
}
#content-nav {
    padding-left: 16px;
    box-shadow: inset 1px 0 0px 0px var(--colorBorderProminent);
    width: 200px;
    position: sticky;
    float: right;
    top: calc(var(--topNavHeight) + 20px + var(--tabOffset, 12px));
    z-index: 10;
    margin-left: 60px;
    align-self: flex-start;
    margin-top: 16px;
    /* protection for long pages with many titles) */
    max-height: calc(100vh - (var(--topNavHeight) + 20px + var(--tabOffset, 12px)) - 16px);
    overflow: auto;
}

#content-nav>ul>li.sub {
    margin-left: 12px;
}

#content-nav>ul>li.sub-2 {
    margin-left: 24px;
}
#content-nav li.active>a {
    color: var(--colorAccent);
    font-weight: 500;
    position: relative;
}
/* ... */

